@@ -1,1 +1,3 @@
 HelpMePlay | 1.0.6
+	Dialog:
+		- Added more pet tamers.
